Add screen text

--- a/motion.conf
+++ b/motion.conf
@@ -56,7 +56,7 @@ width 1920
 height 1080
 
 # Maximum number of frames to be captured per second.
-framerate 50
+framerate 100
 
 # The scale at which to draw text over the image. The recommended range is 1 - 10. 
 text_scale 5
@@ -65,7 +65,7 @@ text_scale 5
 text_left MO_CAM_64
 
 # Text to be overlayed in the lower right corner of images.
-text_right %Y-%m-%d\n%T-%q
+text_right %Y-%m-%d\n%TUTC frame:%q\npixels:%D threshold:%o
 
 ############################################################
 # Motion detection configuration parameters
