Change cam sensitivity.

--- a/motion.conf
+++ b/motion.conf
@@ -90,7 +90,7 @@ emulate_motion off
 # detected (see the mouse on the kitchen floor) lower the value. If motion detects too 
 # many birds or moving trees, increase the number. 
 # (Unless of course you are one of the many many users who use Motion to bird watch!) 
-threshold 200000  # Default 1500 
+threshold 10000  # Default 1500 
 
 # Noise threshold for the motion detection.
 ; noise_level 32
@@ -102,7 +102,7 @@ despeckle_filter EedDl
 minimum_motion_frames 3
 
 # Gap in seconds of no motion detected that triggers the end of an event.
-event_gap 60
+event_gap 5 # 5 for testing purposes 
 
 # The number of pre-captured (buffered) pictures from before motion.
 pre_capture 1
@@ -118,7 +118,7 @@ post_capture 0
 ; on_event_start value
 
 # Command to be executed when an event ends.
-; on_event_end value
+on_event_end /mocam/event_end_script.sh 
 
 # Command to be executed when a movie file is closed.
 ; on_movie_end value
@@ -141,7 +141,7 @@ picture_filename %Y-%m-%d_%H-%M-%S-%q
 movie_output on
 
 # Maximum length of movie in seconds.
-movie_max_time 20
+movie_max_time 60
 
 # The encoding quality of the movie. (0=use bitrate. 1=worst quality, 100=best)
 movie_quality 45  # Default 45 
@@ -150,7 +150,7 @@ movie_quality 45  # Default 45
 movie_codec mkv
 
 # File name(without extension) for movies relative to target directory
-movie_filename %t-%v-%Y-%m-%d-%H-%M-%S
+movie_filename %Y-%m-%d_%H-%M-%S_f%q
 
 ############################################################
 # Webcontrol configuration parameters
