--- a/motion.conf
+++ b/motion.conf
@@ -56,7 +56,7 @@ width 1920
 height 1080
 
 # Maximum number of frames to be captured per second.
-framerate 100
+framerate 20
 
 # The scale at which to draw text over the image. The recommended range is 1 - 10. 
 text_scale 5
@@ -99,16 +99,16 @@ threshold 10000  # Default 1500
 despeckle_filter EedDl
 
 # Number of images that must contain motion to trigger an event.
-minimum_motion_frames 3
+minimum_motion_frames 5
 
 # Gap in seconds of no motion detected that triggers the end of an event.
 event_gap 5 # 5 for testing purposes 
 
 # The number of pre-captured (buffered) pictures from before motion.
-pre_capture 1
+pre_capture 8
 
 # Number of frames to capture after motion is no longer detected.
-post_capture 0
+post_capture 20
 
 ############################################################
 # Script execution configuration parameters
@@ -117,7 +117,8 @@ post_capture 0
 # Command to be executed when an event starts.
 ; on_event_start value
 
-# Command to be executed when an event ends.
+# Command to be executed when an event ends.  Triggered after the 
+# event_gap setting.  
 on_event_end /mocam/event_end_script.sh 
 
 # Command to be executed when a movie file is closed.
@@ -144,7 +145,7 @@ movie_output on
 movie_max_time 60
 
 # The encoding quality of the movie. (0=use bitrate. 1=worst quality, 100=best)
-movie_quality 45  # Default 45 
+movie_quality 25  # Default 45 
 
 # Container/Codec to used for the movie. See motion_guide.html
 movie_codec mkv
