--- a/motion.conf
+++ b/motion.conf
@@ -62,10 +62,10 @@ framerate 20
 text_scale 5
 
 # Text to be overlayed in the lower left corner of images
-text_left MO_CAM_64
+text_left MO_CAM
 
 # Text to be overlayed in the lower right corner of images.
-text_right %Y-%m-%d\n%TUTC frame:%q\npixels:%D threshold:%o
+text_right %a %Y-%m-%d %T%Z frame:%q\npixels:%D threshold:%o
 
 ############################################################
 # Motion detection configuration parameters
@@ -90,10 +90,23 @@ emulate_motion off
 # detected (see the mouse on the kitchen floor) lower the value. If motion detects too 
 # many birds or moving trees, increase the number. 
 # (Unless of course you are one of the many many users who use Motion to bird watch!) 
-threshold 10000  # Default 1500 
+threshold 5000  # Default 1500 
 
 # Noise threshold for the motion detection.
 ; noise_level 32
+
+# Ignore sudden massive light intensity changes when the percentage of the 
+# picture area that changed intensity is greater than this value. The value 
+# defines the picture area in percent above which the lightswitch condition 
+# will trigger. When lightswitch is detected motion detection is disabled for 
+# a configured number of frames. This is to avoid false detection when light 
+# conditions change and when a camera changes sensitivity at low light.
+# By default: 0
+lightswitch_percent 90
+
+# The number of frames to ignore when the lightswitch condition is triggered (see above).
+# By default: 5
+lightswitch_frames 5
 
 # Despeckle the image using (E/e)rode or (D/d)ilate or (l)abel.
 despeckle_filter EedDl
@@ -151,7 +164,7 @@ movie_quality 25  # Default 45
 movie_codec mkv
 
 # File name(without extension) for movies relative to target directory
-movie_filename %Y-%m-%d_%H-%M-%S_f%q
+movie_filename %Y-%m-%d__%H-%M-%S%Z_f%q
 
 ############################################################
 # Webcontrol configuration parameters
